# llm-translate-bench

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: ecommerce.json  fashion_hard_test.json  glossary_multilang.json  product_titles_2000.txt  random_100.json  random_20.json
docs/: BENCHMARK.md  PRICING.md  PROMPTS.md
prompts/: evaluate_default.txt  evaluate_english.txt  translate_default.txt  translate_english.txt
results/: batch_haiku.json  batch_nova.json  batch_sonnet.json  benchmark_20251218_180914.csv  benchmark_20251218_180914.json  benchmark_20251218_181034.csv  benchmark_20251218_181034.json  benchmark_20251218_181100.csv  benchmark_20251218_181100.json  benchmark_20251218_181313.csv  benchmark_20251218_181313.json  benchmark_20251218_181828.csv  benchmark_20251218_181828.json  benchmark_20251218_181949.csv  benchmark_20251218_181949.json  benchmark_20251218_182110.csv  benchmark_20251218_182110.json  ecommerce_all_models_test.json  ecommerce_parallel_comparison.json  ecommerce_test_bedrock_us.anthropic.claude-sonnet-4-5-20250929-v1:0.json  ecommerce_test_bedrock_us.meta.llama3-3-70b-instruct-v1:0.json  ecommerce_test_gemini-2.5-flash-lite.json  ecommerce_test_gemini-2.5-flash.json
src/llm_translate/: __init__.py  cli.py  config.py  glossary.py  translator.py
